# cio

./: README.md  build.gradle.kts
native/: CMakeLists.txt
native/Source/: alloc.cpp  copy.cpp  endian.h  entry.cpp  shared.h
native/Source/interfaces/: cio.h  jni.h  temp.h
native/Source/internal/: semaphore.h  system.h
native/Source/systems/cio/ntos/: error.cpp  error.hpp  fd_block.cpp  fd_stream.cpp  file.cpp  iocp.cpp  iocp.hpp
native/Source/systems/jni/: cio_block.cpp  cio_dispatch.cpp  cio_jni.h  endian.h  unsafe_copy.cpp  unsafe_memory.cpp
native/Source/systems/temp/: allocation.cpp  block.cpp  block.h
native/Source/temp/: allocation.h  block.cpp  block.h
src/main/java/site/neworld/cio/unsafe/: Foreign.java
src/main/kotlin/site/neworld/cio/: Array.kt  Memory.kt  MemoryAccess.kt  MemoryArray.kt  Unsafe.kt
src/main/kotlin/site/neworld/cio/block/: Block.kt
src/main/kotlin/site/neworld/cio/error/: Exceptions.kt
src/main/kotlin/site/neworld/cio/internal/: IODispatch.kt
src/main/kotlin/site/neworld/cio/unsafe/: AlignedAccess.kt  AlignedAccessLE.kt  Array.kt  Cleaner.kt  Memory.kt  UnalignedAccess.kt  UnalignedAccessLE.kt  Unsafe.kt  UnsafeAccess.kt
